# musiman

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: content_handler.rs  content_manager.rs  content_providers.rs  db_handler.rs  editors.rs  image_handler.rs  main.rs  notifier.rs  song.rs  ui.rs  yt_manager.rs
src/app/: action.rs  app.rs  display.rs  mod.rs  run.rs
src/content/: action.rs  callback.rs  display.rs  handler.rs  manager.rs  mod.rs  register.rs  stack.rs
src/content/manager/: action.rs  callback.rs  manager.rs  mod.rs
src/content/providers/: file_explorer.rs  main_provider.rs  mod.rs  queue.rs  queue_provider.rs  traits.rs  yt_explorer.rs  ytalbum.rs  ytplaylist.rs
src/content/song/: mod.rs  tagged_file_song.rs  traits.rs  untagged_file_song.rs  yt_song.rs
src/image/: config.rs  mod.rs  utils.rs
src/image/printer/: block.rs  mod.rs  sixel.rs  traits.rs
src/service/: config.rs  db.rs  editors.rs  log.rs  mod.rs  yt.rs
src/service/db/: mod.rs  musimanager_db.rs
src/service/python/: action.rs  code.rs  item.rs  manager.rs  mod.rs
src/service/yt/: mod.rs  ytdl.rs  ytmusic.rs
