[package]
name = "musiman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
toml = "0.5"

pyo3 = { version = "0.16", features = ["auto-initialize", "serde", "anyhow"] }

tui = "0.17"
crossterm = "0.22"
unicode-width = "0.1.9"


musiplayer = {version = "0.1", path = "../musimanager/musiplayer"}
# musiplayer = {version = "0.1", git = "https://github.com/thrombe/musimanager"}