[package]
name = "musiman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
toml = "0.5"
log = "0.4.17"
fern = "0.6.1"
lofty = "0.6.3"

# tokio = {version = "1.18", features = ["rt-multi-thread", "time", "full", "fs"]}

tui = "0.18"
crossterm = "0.23"
unicode-width = "0.1.9"


[dependencies.musiplayer]
version = "0.1"

path = "../musimanager/musiplayer"
features = ["player-mpv", "force"]

# git = "https://github.com/thrombe/musimanager"


[dependencies.pyo3]
version = "0.16"
features = [
    "serde",
    "anyhow",
    # "auto-initialize",
    ]